## Metronome

AC_INIT([Metronome], [1.0], [a@b.c],
        [metronome], [https://bitbucket.org/drk4/metronome/wiki/])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])

PKG_CHECK_MODULES([DEPENDENCIES], [gtkmm-3.0 >= 3.0.0 gstreamermm-0.10 >= 0.10.0])


AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
